# manydeps-cln

./: .bazelrc  .gitmodules  BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE  cln.BUILD  gmp.BUILD  script-deps.sh
.github/workflows/: bazel-multi-platform.yml  cmake-multi-platform.yml
include/: BUILD.bazel
include/manydeps-cln-lib/: BUILD.bazel  Testing.hpp
src/: main.cpp
tests/: BUILD.bazel  manydeps_cln.test.cpp
tools/patch/: AsmUnderscore.cmake  README.md  cl_GV_number_aprint.cc  cl_SV_aprint.cc  cl_SV_number_aprint.cc  dll_mpir_gc.vcxproj  lib_mpir_cxx.vcxproj  lib_mpir_gc.vcxproj  string.h
