load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(
    default_visibility = ["//visibility:public"],
)

sh_binary(
    name = "vcpkg-install",
    srcs = ["vcpkg-install.sh"],
)

cc_binary(
    name = "app_demo",
    srcs = glob([
        "src/main.cpp", 
    ]),
    # DO NOT PUT "@gmp//:lib" HERE!
    deps = ["//include:manydeps-cln-lib", "@cln//:cln"],
    linkstatic=1
)

#cc_import(
#  name = "get_libcln",
#  static_library = "bazel-bin/external/cln/libcln.a",
#  shared_library = "bazel-bin/external/cln/libcln.so",
#)


cc_binary(
    name = "app_demo_cln",
    srcs = glob([
        "src/main_cln.cpp"
    ]),
    deps = ["@cln//:cln"], # ":get_libcln"
    linkstatic=1,
    # linkstatic=False,
    #
    ####linkshared=1, # CANNOT DO THIS ON A .exe / BINARY!
    ####copts=["-fPIC"],
    #####linkopts = ["-Lbazel-bin/external/cln","-lcln"],
)
