load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(
    default_visibility = ["//visibility:public"],
)

sh_binary(
    name = "vcpkg-install",
    srcs = ["vcpkg-install.sh"],
)

cc_binary(
    name = "app_demo",
    srcs = glob([
        "src/main.cpp", 
    ]),
    # DO NOT PUT "@gmp//:lib" HERE!
    deps = ["//include:manydeps-cln-lib", "@cln//:cln"],
    linkstatic=1
)

cc_binary(
    name = "app_demo_cln",
    srcs = glob([
        "src/main_cln.cpp"
    ]),
    deps = ["@cln//:cln"], # "@cln//:cln_shared"
    linkstatic=1, # DEFAULT
    ####linkshared=1, # CANNOT DO THIS ON A .exe / BINARY!
)
